# Penumbra-FHE

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PHILOSOPHY.md  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  clippy.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crypto_concern.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md
crates/penumbra-analyzer/: Cargo.toml  README.md
crates/penumbra-analyzer/src/: lib.rs
crates/penumbra-compiler/: Cargo.toml  README.md
crates/penumbra-compiler/src/: lib.rs
crates/penumbra-ir/: Cargo.toml  README.md
crates/penumbra-ir/src/: lib.rs
crates/penumbra-py/: Cargo.toml  README.md  build.rs
crates/penumbra-py/src/: lib.rs
crates/penumbra-runtime/: Cargo.toml  README.md
crates/penumbra-runtime/src/: crypto.rs  error.rs  lib.rs  ops.rs
crates/penumbra-runtime/tests/: scalar_ops.rs
docs/: BENCHMARKS.md  DEVELOPMENT.md  IR-SPEC.md  Makefile  NOTES-tfhe.md  QUANTIZATION.md  SUPPORTED-OPS.md  conf.py  index.rst
docs/api/: index.rst
docs/tutorials/: index.rst  scalars.rst
examples/: README.md
examples/faces/: README.md  face_cnn.onnx  olivetti_export.py  phase7_faces_fixture.json
examples/mnist/: README.md  cnn_export.py  digit_cnn.onnx  digit_linear_sklearn.onnx  onnx_export.py  phase2_fixture.json  phase4_cnn_fixture.json  phase5_digits_fixture.json  phase5_qat_fixture.json  phase6_onnx_fixture.json  phase6_sklearn_fixture.json  qat_export.py  real_digits_export.py  sklearn_export.py  train_quantize_export.py
python/: pyproject.toml
python/penumbra/: __init__.py  bitwidth.py  client.py  compile.py  ir.py  layers.py  model.py  onnx_loader.py  op_registry.py  reference.py
python/penumbra/adapters/: __init__.py
python/penumbra/quantization/: __init__.py  accuracy.py  calibration.py  lut.py  ptq.py  qat.py  spec.py
python/penumbra_fhe/: __init__.py  __init__.pyi  _bindings.pyi  errors.py  ingestion.py
runtime/: Cargo.toml
runtime/src/: encrypt.rs  eval.rs  ir.rs  keys.rs  lib.rs
runtime/src/ops/: activation.rs  add.rs  argmax.rs  conv2d.rs  linear.rs  mod.rs  pool.rs  requant.rs
runtime/tests/: bitwidth_conformance.rs  golden_add.rs  golden_cnn.rs  golden_conv2d.rs  golden_digits.rs  golden_faces.rs  golden_logreg.rs  golden_onnx.rs  golden_pool.rs  golden_qat.rs  golden_requant.rs  golden_requant_mult.rs  golden_requant_per_channel.rs  golden_sklearn.rs  hello_fhe.rs  ir_conformance.rs
tests/: README.md  test_bitwidth_conformance.py  test_cnn_fixture.py  test_compile.py  test_faces_fixture.py  test_ir_conformance.py  test_model_quantize.py  test_onnx_fidelity.py  test_onnx_fixture.py  test_onnx_loader.py  test_onnx_unsupported.py  test_placeholder.py  test_qat_fixture.py  test_quantization_accuracy.py  test_quantization_lut.py  test_quantization_ptq.py  test_quantized_vs_fhe.py  test_real_digits_fixture.py  test_reference.py  test_sklearn_fixture.py  test_supported_ops_doc.py
tests/fixtures/: bitwidth_cases.json
tests/python/: test_scalars.py  test_smoke.py
