[workspace]
resolver = "2"
members = [
    "crates/penumbra-ir",
    "crates/penumbra-analyzer",
    "crates/penumbra-compiler",
    "crates/penumbra-runtime",
    "crates/penumbra-py",
]
# Note: The workspace will not build until each member crate exists with its own Cargo.toml and src/lib.rs.
# See ARCHITECTURE.md §3 for each crate's contract.

[workspace.package]
version = "0.0.0"
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/Harikeshav-R/penumbra-fhe"
homepage = "https://github.com/Harikeshav-R/penumbra-fhe"
documentation = "https://harikeshav-r.github.io/penumbra-fhe/"
readme = "README.md"
keywords = ["fhe", "homomorphic-encryption", "privacy", "machine-learning", "cryptography"]
categories = ["cryptography", "science"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# TODO: verify against latest stable TFHE-rs release
tfhe = { version = "=1.6.1", features = [] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"] }
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unused_must_use = "deny"
non_ascii_idents = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 1
