[package]
name = "penumbra-runtime"
description = "FHE runtime and primitive operations for Penumbra."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
tfhe.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
